--- a/.github/workflows/jmeter-test.yml
+++ b/.github/workflows/jmeter-test.yml
@@ -15,17 +15,34 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JMeter
+    - name: Set up JMeter and Install Dummy Sampler Plugin
       run: |
         sudo apt update
-        sudo apt install -y openjdk-11-jdk
+        sudo apt install -y openjdk-11-jdk unzip wget
+
+        # Download and extract JMeter
         wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.5.tgz
         tar -xzf apache-jmeter-5.5.tgz
-        export PATH=$PATH:$PWD/apache-jmeter-5.5/bin
+        cd apache-jmeter-5.5
+
+        # Download JMeter Plugins Manager
+        wget https://jmeter-plugins.org/get/ -O lib/ext/jmeter-plugins-manager.jar
+
+        # Install Plugin Manager Command Tool
+        java -cp lib/ext/jmeter-plugins-manager.jar org.jmeterplugins.repository.PluginManagerCMDInstaller
+
+        # Export path so JMeter commands are available in the next steps
+        export PATH=$PATH:$PWD/bin
+
+        # Install Dummy Sampler plugin
+        bin/PluginsManagerCMD.sh install dummy
+
+        # Save current path for later steps
+        echo "JMETER_PATH=$PWD" >> $GITHUB_ENV
 
     - name: Run JMeter Test Plan
       run: |
-        export PATH=$PATH:$PWD/apache-jmeter-5.5/bin
+        export PATH=$PATH:$JMETER_PATH/bin
         jmeter -n -t BatchTestBooks.jmx -l results.csv
 
     - name: Upload Result File
